--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -1,5 +1,156 @@
 [
     {
+        "name" : "Light",
+        "sherif_total" : 1,
+        "sherif_win" : 1,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 0,
+        "first_kill" : 1,
+        "best_turn" : 0,
+        "plus_points" : 0,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Алиса (Елизавета)",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Kinder",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 1,
+        "first_kill" : 1,
+        "best_turn" : 0.4,
+        "plus_points" : 0.39,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Инженер",
+        "sherif_total" : 1,
+        "sherif_win" : 1,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 1,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.28,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Алиса (Валерия)",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 3,
+        "citizen_win" : 2,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.18,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Опер",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 1,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.25,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Джина",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.08,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Зодиак",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 2,
+        "don_win" : 2,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 2,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.63,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Криста",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
+        "first_kill" : 1,
+        "best_turn" : 0,
+        "plus_points" : 0.11,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Никки",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 3,
+        "citizen_win" : 2,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.55,
+        "minus_points" : 0,
+        "hide" : true
+    },
+    {
         "name" : "Новый Герой",
         "sherif_total" : 0,
         "sherif_win" : 0,
