Rating 2.2 was updated

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -5,13 +5,13 @@
         "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 1,
-        "mafia_win" : 0,
-        "citizen_total" : 2,
+        "mafia_total" : 3,
+        "mafia_win" : 2,
+        "citizen_total" : 4,
         "citizen_win" : 0,
         "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0,
+        "plus_points" : 0.38,
         "minus_points" : 0
     },
     {
@@ -20,9 +20,9 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 3,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 5,
         "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
@@ -61,32 +61,32 @@
     },
     {
         "name" : "Алиса (Валерия)",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
-        "don_total" : 0,
-        "don_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 3,
+        "citizen_total" : 5,
         "citizen_win" : 2,
-        "first_kill" : 0,
-        "best_turn" : 0,
-        "plus_points" : 0.18,
+        "first_kill" : 1,
+        "best_turn" : -0.2,
+        "plus_points" : 0.33,
         "minus_points" : 0
     },
     {
         "name" : "Опер",
         "sherif_total" : 1,
         "sherif_win" : 0,
-        "don_total" : 1,
-        "don_win" : 0,
+        "don_total" : 2,
+        "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 1,
+        "citizen_total" : 4,
         "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.25,
+        "plus_points" : 0.45,
         "minus_points" : 0
     },
     {
@@ -142,13 +142,103 @@
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 3,
+        "citizen_total" : 6,
         "citizen_win" : 2,
-        "first_kill" : 0,
+        "first_kill" : 1,
         "best_turn" : 0,
         "plus_points" : 0.55,
         "minus_points" : 0,
         "hide" : true
+    },
+    {
+        "name" : "Правда",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 0,
+        "first_kill" : 1,
+        "best_turn" : 0.2,
+        "plus_points" : 0,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Yesterday",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 1,
+        "citizen_win" : 0,
+        "first_kill" : 1,
+        "best_turn" : -0.2,
+        "plus_points" : 0.11,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Лекса",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 0,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.18,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Томми",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 2,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.39,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Сол",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 3,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.11,
+        "minus_points" : 0
+    },
+    {
+        "name" : "ДНК",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0,
+        "minus_points" : 0
     },
     {
         "name" : "Новый Герой",
