season 2.3 was added

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -65,43 +65,43 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 1,
-        "mafia_win" : 1,
-        "citizen_total" : 5,
-        "citizen_win" : 2,
-        "first_kill" : 1,
-        "best_turn" : -0.2,
-        "plus_points" : 0.33,
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 8,
+        "citizen_win" : 4,
+        "first_kill" : 2,
+        "best_turn" : -0.4,
+        "plus_points" : 0.59,
         "minus_points" : 0
     },
     {
         "name" : "Опер",
         "sherif_total" : 1,
         "sherif_win" : 0,
-        "don_total" : 2,
+        "don_total" : 3,
         "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 4,
-        "citizen_win" : 1,
-        "first_kill" : 0,
+        "citizen_total" : 7,
+        "citizen_win" : 2,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0.45,
+        "plus_points" : 0.59,
         "minus_points" : 0
     },
     {
         "name" : "Джина",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 0,
-        "don_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 3,
-        "citizen_win" : 1,
+        "citizen_total" : 6,
+        "citizen_win" : 3,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.08,
+        "plus_points" : 0.62,
         "minus_points" : 0
     },
     {
@@ -112,41 +112,41 @@
         "don_win" : 2,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 2,
-        "citizen_win" : 2,
+        "citizen_total" : 6,
+        "citizen_win" : 4,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.63,
+        "plus_points" : 0.91,
         "minus_points" : 0
     },
     {
         "name" : "Криста",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
+        "sherif_total" : 1,
+        "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 4,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 5,
         "citizen_win" : 2,
         "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0.11,
+        "plus_points" : 0.36,
         "minus_points" : 0
     },
     {
         "name" : "Никки",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 0,
+        "don_total" : 1,
         "don_win" : 0,
-        "mafia_total" : 1,
-        "mafia_win" : 1,
-        "citizen_total" : 6,
-        "citizen_win" : 2,
-        "first_kill" : 1,
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 8,
+        "citizen_win" : 3,
+        "first_kill" : 2,
         "best_turn" : 0,
-        "plus_points" : 0.55,
+        "plus_points" : 0.68,
         "minus_points" : 0,
         "hide" : true
     },
@@ -167,17 +167,17 @@
     },
     {
         "name" : "Yesterday",
-        "sherif_total" : 1,
-        "sherif_win" : 0,
+        "sherif_total" : 3,
+        "sherif_win" : 1,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 1,
+        "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 1,
+        "citizen_total" : 2,
         "citizen_win" : 0,
         "first_kill" : 1,
         "best_turn" : -0.2,
-        "plus_points" : 0.11,
+        "plus_points" : 0.68,
         "minus_points" : 0
     },
     {
@@ -227,17 +227,47 @@
     },
     {
         "name" : "ДНК",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 0,
+        "citizen_total" : 5,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.02,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Артик",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 1,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.28,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Мориарти",
         "sherif_total" : 0,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 3,
-        "citizen_win" : 0,
-        "first_kill" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0,
+        "plus_points" : 0.17,
         "minus_points" : 0
     },
     {
