--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -7,11 +7,11 @@
         "don_win" : 0,
         "mafia_total" : 3,
         "mafia_win" : 2,
-        "citizen_total" : 4,
-        "citizen_win" : 0,
+        "citizen_total" : 7,
+        "citizen_win" : 2,
         "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0.38,
+        "plus_points" : 0.4,
         "minus_points" : 0
     },
     {
@@ -22,11 +22,11 @@
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 5,
-        "citizen_win" : 1,
+        "citizen_total" : 8,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
+        "plus_points" : 0.06,
         "minus_points" : 0
     },
     {
@@ -65,27 +65,27 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 2,
-        "mafia_win" : 2,
-        "citizen_total" : 8,
-        "citizen_win" : 4,
+        "mafia_total" : 4,
+        "mafia_win" : 3,
+        "citizen_total" : 9,
+        "citizen_win" : 5,
         "first_kill" : 2,
         "best_turn" : -0.4,
-        "plus_points" : 0.59,
+        "plus_points" : 1.02,
         "minus_points" : 0
     },
     {
         "name" : "Опер",
-        "sherif_total" : 1,
-        "sherif_win" : 0,
+        "sherif_total" : 3,
+        "sherif_win" : 1,
         "don_total" : 3,
         "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 7,
-        "citizen_win" : 2,
-        "first_kill" : 1,
-        "best_turn" : 0,
+        "citizen_total" : 9,
+        "citizen_win" : 3,
+        "first_kill" : 2,
+        "best_turn" : -0.2,
         "plus_points" : 0.59,
         "minus_points" : 0
     },
@@ -110,13 +110,13 @@
         "sherif_win" : 0,
         "don_total" : 2,
         "don_win" : 2,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 6,
-        "citizen_win" : 4,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 7,
+        "citizen_win" : 5,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.91,
+        "plus_points" : 1.08,
         "minus_points" : 0
     },
     {
@@ -125,7 +125,7 @@
         "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 2,
+        "mafia_total" : 3,
         "mafia_win" : 1,
         "citizen_total" : 5,
         "citizen_win" : 2,
@@ -138,15 +138,15 @@
         "name" : "Никки",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 1,
+        "don_total" : 2,
         "don_win" : 0,
-        "mafia_total" : 2,
-        "mafia_win" : 2,
-        "citizen_total" : 8,
-        "citizen_win" : 3,
+        "mafia_total" : 3,
+        "mafia_win" : 3,
+        "citizen_total" : 10,
+        "citizen_win" : 4,
         "first_kill" : 2,
         "best_turn" : 0,
-        "plus_points" : 0.68,
+        "plus_points" : 0.92,
         "minus_points" : 0,
         "hide" : true
     },
@@ -171,13 +171,13 @@
         "sherif_win" : 1,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 2,
-        "mafia_win" : 1,
-        "citizen_total" : 2,
-        "citizen_win" : 0,
+        "mafia_total" : 3,
+        "mafia_win" : 2,
+        "citizen_total" : 5,
+        "citizen_win" : 2,
         "first_kill" : 1,
         "best_turn" : -0.2,
-        "plus_points" : 0.68,
+        "plus_points" : 1.18,
         "minus_points" : 0
     },
     {
@@ -214,15 +214,15 @@
         "name" : "Сол",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 0,
-        "don_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 3,
-        "citizen_win" : 0,
+        "citizen_total" : 5,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.11,
+        "plus_points" : 0.4,
         "minus_points" : 0
     },
     {
@@ -233,8 +233,8 @@
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 5,
-        "citizen_win" : 1,
+        "citizen_total" : 6,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
         "plus_points" : 0.02,
@@ -244,30 +244,45 @@
         "name" : "Артик",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 1,
-        "don_win" : 1,
-        "mafia_total" : 2,
+        "don_total" : 2,
+        "don_win" : 2,
+        "mafia_total" : 3,
         "mafia_win" : 1,
-        "citizen_total" : 1,
-        "citizen_win" : 1,
-        "first_kill" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 2,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0.28,
+        "plus_points" : 0.3,
         "minus_points" : 0
     },
     {
         "name" : "Мориарти",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 4,
+        "citizen_total" : 5,
         "citizen_win" : 2,
         "first_kill" : 1,
         "best_turn" : 0,
         "plus_points" : 0.17,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Флэш",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 1,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0,
         "minus_points" : 0
     },
     {
