[TG] ev.5 season

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -20,13 +20,13 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 0,
-        "mafia_total" : 1,
+        "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 8,
-        "citizen_win" : 2,
+        "citizen_total" : 10,
+        "citizen_win" : 3,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.06,
+        "plus_points" : 0.08,
         "minus_points" : 0
     },
     {
@@ -48,15 +48,15 @@
         "name" : "Инженер",
         "sherif_total" : 1,
         "sherif_win" : 1,
-        "don_total" : 0,
-        "don_win" : 0,
-        "mafia_total" : 2,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 3,
         "mafia_win" : 1,
-        "citizen_total" : 1,
-        "citizen_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.28,
+        "plus_points" : 0.57,
         "minus_points" : 0
     },
     {
@@ -65,13 +65,13 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 4,
-        "mafia_win" : 3,
-        "citizen_total" : 9,
-        "citizen_win" : 5,
-        "first_kill" : 2,
+        "mafia_total" : 5,
+        "mafia_win" : 4,
+        "citizen_total" : 11,
+        "citizen_win" : 7,
+        "first_kill" : 3,
         "best_turn" : -0.4,
-        "plus_points" : 1.02,
+        "plus_points" : 1.32,
         "minus_points" : 0
     },
     {
@@ -82,8 +82,8 @@
         "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 9,
-        "citizen_win" : 3,
+        "citizen_total" : 10,
+        "citizen_win" : 4,
         "first_kill" : 2,
         "best_turn" : -0.2,
         "plus_points" : 0.59,
@@ -136,17 +136,17 @@
     },
     {
         "name" : "Никки",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
+        "sherif_total" : 1,
+        "sherif_win" : 1,
         "don_total" : 2,
         "don_win" : 0,
-        "mafia_total" : 3,
-        "mafia_win" : 3,
+        "mafia_total" : 5,
+        "mafia_win" : 4,
         "citizen_total" : 10,
         "citizen_win" : 4,
         "first_kill" : 2,
         "best_turn" : 0,
-        "plus_points" : 0.92,
+        "plus_points" : 1.2,
         "minus_points" : 0,
         "hide" : true
     },
@@ -173,11 +173,11 @@
         "don_win" : 1,
         "mafia_total" : 3,
         "mafia_win" : 2,
-        "citizen_total" : 5,
-        "citizen_win" : 2,
-        "first_kill" : 1,
-        "best_turn" : -0.2,
-        "plus_points" : 1.18,
+        "citizen_total" : 8,
+        "citizen_win" : 4,
+        "first_kill" : 2,
+        "best_turn" : 0,
+        "plus_points" : 1.49,
         "minus_points" : 0
     },
     {
@@ -186,13 +186,13 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 1,
+        "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.18,
+        "plus_points" : 0.32,
         "minus_points" : 0
     },
     {
@@ -218,9 +218,9 @@
         "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 5,
-        "citizen_win" : 1,
-        "first_kill" : 0,
+        "citizen_total" : 7,
+        "citizen_win" : 2,
+        "first_kill" : 1,
         "best_turn" : 0,
         "plus_points" : 0.4,
         "minus_points" : 0
@@ -283,6 +283,51 @@
         "first_kill" : 0,
         "best_turn" : 0,
         "plus_points" : 0,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Аспин",
+        "sherif_total" : 2,
+        "sherif_win" : 1,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 1,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.27,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Ворон",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 2,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 1,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.21,
+        "minus_points" : 0
+    },
+    {
+        "name" : "Аврора",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 2,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "plus_points" : 0.04,
         "minus_points" : 0
     },
     {
