--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -37,7 +37,7 @@
         "don_win" : 1,
         "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 3,
+        "citizen_total" : 4,
         "citizen_win" : 1,
         "first_kill" : 2,
         "best_turn" : 0.4,
@@ -125,30 +125,30 @@
         "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 3,
-        "mafia_win" : 1,
-        "citizen_total" : 5,
+        "mafia_total" : 4,
+        "mafia_win" : 2,
+        "citizen_total" : 7,
         "citizen_win" : 2,
-        "first_kill" : 1,
+        "first_kill" : 2,
         "best_turn" : 0,
         "plus_points" : 0.36,
         "minus_points" : 0
     },
     {
         "name" : "Никки",
-        "sherif_total" : 1,
+        "sherif_total" : 2,
         "sherif_win" : 1,
-        "don_total" : 2,
-        "don_win" : 0,
-        "mafia_total" : 5,
-        "mafia_win" : 4,
-        "citizen_total" : 10,
+        "don_total" : 4,
+        "don_win" : 1,
+        "mafia_total" : 6,
+        "mafia_win" : 5,
+        "citizen_total" : 11,
         "citizen_win" : 4,
-        "first_kill" : 2,
+        "first_kill" : 3,
         "best_turn" : 0,
-        "plus_points" : 1.2,
+        "plus_points" : 1.23,
         "minus_points" : 0,
-        "hide" : true
+        "hide" : false
     },
     {
         "name" : "Правда",
@@ -171,9 +171,9 @@
         "sherif_win" : 1,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 4,
+        "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 10,
+        "citizen_total" : 14,
         "citizen_win" : 4,
         "first_kill" : 3,
         "best_turn" : 0,
@@ -182,14 +182,14 @@
     },
     {
         "name" : "Лекса",
-        "sherif_total" : 1,
+        "sherif_total" : 2,
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 2,
-        "mafia_win" : 1,
-        "citizen_total" : 6,
-        "citizen_win" : 2,
+        "mafia_total" : 3,
+        "mafia_win" : 2,
+        "citizen_total" : 8,
+        "citizen_win" : 3,
         "first_kill" : 1,
         "best_turn" : 0.2,
         "plus_points" : 0.35,
@@ -197,14 +197,14 @@
     },
     {
         "name" : "Сол",
-        "sherif_total" : 0,
+        "sherif_total" : 2,
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 7,
-        "citizen_win" : 2,
+        "citizen_total" : 10,
+        "citizen_win" : 3,
         "first_kill" : 1,
         "best_turn" : 0,
         "plus_points" : 0.4,
@@ -231,13 +231,13 @@
         "sherif_win" : 0,
         "don_total" : 3,
         "don_win" : 3,
-        "mafia_total" : 4,
-        "mafia_win" : 2,
-        "citizen_total" : 5,
-        "citizen_win" : 3,
+        "mafia_total" : 5,
+        "mafia_win" : 3,
+        "citizen_total" : 8,
+        "citizen_win" : 4,
         "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0.45,
+        "plus_points" : 0.53,
         "minus_points" : 0
     },
     {
@@ -261,7 +261,7 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 0,
-        "mafia_total" : 0,
+        "mafia_total" : 1,
         "mafia_win" : 0,
         "citizen_total" : 2,
         "citizen_win" : 0,
@@ -308,11 +308,11 @@
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 3,
+        "citizen_total" : 5,
         "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0.04,
+        "plus_points" : 0.11,
         "minus_points" : 0
     },
     {
