[TG] S3 G1 seasson rating

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -5,14 +5,15 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
-        "first_kill" : 0,
-        "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 3,
+        "citizen_win" : 1,
+        "first_kill" : 1,
+        "best_turn" : 1,
+        "game_points" : 12.5,
+        "role_points" : 6,
+        "players_points" : 3
     },
     {
         "name" : "Yesterday",
@@ -22,27 +23,29 @@
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
+        "citizen_total" : 1,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 3,
+        "role_points" : 3,
+        "players_points" : 0
     },
     {
         "name" : "Алиса(Лера)",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
+        "sherif_total" : 1,
+        "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 8.5,
+        "role_points" : 3,
+        "players_points" : 0.3
     },
     {
         "name" : "Тургенев",
@@ -52,42 +55,45 @@
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 7,
+        "role_points" : 3,
+        "players_points" : 0.3
     },
     {
         "name" : "Криста",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
+        "mafia_total" : 3,
+        "mafia_win" : 2,
         "citizen_total" : 0,
         "citizen_win" : 0,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 10.5,
+        "role_points" : 6,
+        "players_points" : 1.5
     },
     {
         "name" : "Мориарти",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 0,
-        "don_win" : 0,
-        "mafia_total" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 0,
+        "citizen_total" : 2,
         "citizen_win" : 0,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 10.5,
+        "role_points" : 3,
+        "players_points" : 1.8
     },
     {
         "name" : "Йода",
@@ -97,57 +103,61 @@
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
-        "first_kill" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 1,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 9.5,
+        "role_points" : 3,
+        "players_points" : 0.6
     },
     {
         "name" : "Алл",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 0,
-        "don_win" : 0,
+        "don_total" : 3,
+        "don_win" : 2,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 0,
+        "citizen_total" : 1,
         "citizen_win" : 0,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 7.5,
+        "role_points" : 6,
+        "players_points" : 0.6
     },
     {
         "name" : "Sol",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
-        "first_kill" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 1,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 9.5,
+        "role_points" : 3,
+        "players_points" : 0
     },
     {
         "name" : "Лекса",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 1,
         "citizen_win" : 0,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" :5.5,
+        "role_points" : 3,
+        "players_points" : 0
     },
     {
         "name" : "Опер",
@@ -155,13 +165,14 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 0,
-        "citizen_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 2,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "plus_points" : 0,
-        "minus_points" : 0
+        "game_points" : 10.5,
+        "role_points" : 9,
+        "players_points" : 3.9
     }
 ]
