--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -21,15 +21,15 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
+        "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 1,
-        "citizen_win" : 1,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 3,
-        "role_points" : 3,
-        "players_points" : 0
+        "game_points" : 14.5,
+        "role_points" : 6,
+        "players_points" : 2.1
     },
     {
         "name" : "Алиса(Лера)",
@@ -97,17 +97,17 @@
     },
     {
         "name" : "Йода",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
+        "mafia_total" : 2,
         "mafia_win" : 0,
-        "citizen_total" : 4,
+        "citizen_total" : 5,
         "citizen_win" : 1,
-        "first_kill" : 1,
-        "best_turn" : 0,
-        "game_points" : 9.5,
+        "first_kill" : 3,
+        "best_turn" : 2,
+        "game_points" : 17,
         "role_points" : 3,
         "players_points" : 0.6
     },
@@ -117,15 +117,15 @@
         "sherif_win" : 0,
         "don_total" : 3,
         "don_win" : 2,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 1,
-        "citizen_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 7.5,
-        "role_points" : 6,
-        "players_points" : 0.6
+        "game_points" : 18.5,
+        "role_points" : 15,
+        "players_points" : 1.2
     },
     {
         "name" : "Sol",
@@ -145,19 +145,19 @@
     },
     {
         "name" : "Лекса",
-        "sherif_total" : 1,
-        "sherif_win" : 0,
+        "sherif_total" : 2,
+        "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 1,
-        "citizen_win" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" :5.5,
-        "role_points" : 3,
-        "players_points" : 0
+        "game_points" : 12.5,
+        "role_points" : 9,
+        "players_points" : 0.6
     },
     {
         "name" : "Опер",
@@ -165,14 +165,94 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 2,
+        "mafia_total" : 4,
         "mafia_win" : 2,
+        "citizen_total" : 4,
+        "citizen_win" : 3,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 19,
+        "role_points" : 15,
+        "players_points" : 6
+    },
+    {
+        "name" : "Волга",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 9.5,
+        "role_points" : 6,
+        "players_points" : 0.6
+    },
+    {
+        "name" : "Крот",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
         "citizen_total" : 2,
         "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 10.5,
-        "role_points" : 9,
+        "game_points" : 9,
+        "role_points" : 6,
+        "players_points" : 0.3
+    },
+    {
+        "name" : "Артик",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 2,
+        "citizen_win" : 1,
+        "first_kill" : 1,
+        "best_turn" : 1,
+        "game_points" : 15,
+        "role_points" : 6,
         "players_points" : 3.9
+    },
+    {
+        "name" : "Sky",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 2,
+        "first_kill" : 1,
+        "best_turn" : 0,
+        "game_points" : 10,
+        "role_points" : 6,
+        "players_points" : 0.6
+    },
+    {
+        "name" : "Гаджет",
+        "sherif_total" : 1,
+        "sherif_win" : 1,
+        "don_total" : 2,
+        "don_win" : 2,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 1,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 7.5,
+        "role_points" : 12,
+        "players_points" : 0.9
     }
 ]
