--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -3,33 +3,33 @@
         "name" : "Архи",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 0,
-        "don_win" : 0,
+        "don_total" : 2,
+        "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 3,
-        "citizen_win" : 1,
+        "citizen_total" : 5,
+        "citizen_win" : 2,
         "first_kill" : 1,
         "best_turn" : 1,
-        "game_points" : 12.5,
-        "role_points" : 6,
-        "players_points" : 3
+        "game_points" : 24.0,
+        "role_points" : 12,
+        "players_points" : 4.2
     },
     {
         "name" : "Yesterday",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 0,
+        "don_total" : 1,
         "don_win" : 0,
-        "mafia_total" : 1,
-        "mafia_win" : 0,
-        "citizen_total" : 4,
-        "citizen_win" : 2,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 6,
+        "citizen_win" : 3,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 14.5,
-        "role_points" : 6,
-        "players_points" : 2.1
+        "game_points" : 26.5,
+        "role_points" : 12,
+        "players_points" : 5.1
     },
     {
         "name" : "Алиса(Лера)",
@@ -85,15 +85,15 @@
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 1,
-        "mafia_win" : 0,
-        "citizen_total" : 2,
-        "citizen_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 5,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 10.5,
-        "role_points" : 3,
-        "players_points" : 1.8
+        "game_points" : 20,
+        "role_points" : 12,
+        "players_points" : 2.1
     },
     {
         "name" : "Йода",
@@ -103,12 +103,12 @@
         "don_win" : 0,
         "mafia_total" : 2,
         "mafia_win" : 0,
-        "citizen_total" : 5,
-        "citizen_win" : 1,
-        "first_kill" : 3,
+        "citizen_total" : 9,
+        "citizen_win" : 3,
+        "first_kill" : 4,
         "best_turn" : 2,
-        "game_points" : 17,
-        "role_points" : 3,
+        "game_points" : 26,
+        "role_points" : 9,
         "players_points" : 0.6
     },
     {
@@ -117,15 +117,15 @@
         "sherif_win" : 0,
         "don_total" : 3,
         "don_win" : 2,
-        "mafia_total" : 1,
-        "mafia_win" : 1,
-        "citizen_total" : 4,
-        "citizen_win" : 2,
-        "first_kill" : 0,
+        "mafia_total" : 3,
+        "mafia_win" : 2,
+        "citizen_total" : 6,
+        "citizen_win" : 3,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 18.5,
-        "role_points" : 15,
-        "players_points" : 1.2
+        "game_points" : 29,
+        "role_points" : 21,
+        "players_points" : 2.1
     },
     {
         "name" : "Sol",
@@ -165,15 +165,15 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 4,
+        "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 4,
-        "citizen_win" : 3,
+        "citizen_total" : 7,
+        "citizen_win" : 4,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 19,
-        "role_points" : 15,
-        "players_points" : 6
+        "game_points" : 27.5,
+        "role_points" : 18,
+        "players_points" : 7.5
     },
     {
         "name" : "Волга",
@@ -209,19 +209,19 @@
     },
     {
         "name" : "Артик",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
+        "sherif_total" : 2,
+        "sherif_win" : 1,
         "don_total" : 1,
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 2,
-        "citizen_win" : 1,
-        "first_kill" : 1,
-        "best_turn" : 1,
-        "game_points" : 15,
-        "role_points" : 6,
-        "players_points" : 3.9
+        "citizen_total" : 4,
+        "citizen_win" : 2,
+        "first_kill" : 2,
+        "best_turn" : 2,
+        "game_points" : 26.5,
+        "role_points" : 12,
+        "players_points" : 6.3
     },
     {
         "name" : "Sky",
@@ -241,18 +241,50 @@
     },
     {
         "name" : "Гаджет",
-        "sherif_total" : 1,
-        "sherif_win" : 1,
+        "sherif_total" : 3,
+        "sherif_win" : 2,
         "don_total" : 2,
         "don_win" : 2,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 1,
+        "citizen_total" : 3,
+        "citizen_win" : 2,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 17,
+        "role_points" : 18,
+        "players_points" : 0.9
+    },
+    {
+        "name" : "Инженер",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 2,
         "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
         "game_points" : 7.5,
-        "role_points" : 12,
-        "players_points" : 0.9
+        "role_points" : 6,
+        "players_points" : 0
+    },
+    {
+        "name" : "Аспин",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 1,
+        "mafia_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 9,
+        "role_points" : 6,
+        "players_points" : 2.7
     }
 ]
